# swift-composable-architecture-old

./: Package.swift  README.md
.build/: workspace-state.json
LocalPackages/swift-system-old/Sources/SystemOld/: CMakeLists.txt
Sources/LocalPackages/swift-syntax-old/: BUILD.bazel  CONTRIBUTING.md  Changelog.md  MODULE.bazel  Package.swift  README.md
Sources/LocalPackages/swift-syntax-old/Contributor Documentation/: Changing Swift Syntax.md  Filing Parser Bug Reports.md  README.md  SPI Attribute.md
Sources/LocalPackages/swift-syntax-old/EditorExtension/SwiftRefactorExtension/: CommandDiscovery.swift  SourceEditorCommand.swift
Sources/LocalPackages/swift-syntax-old/Sources/: CMakeLists.txt
Sources/LocalPackages/swift-syntax-old/Sources/SwiftBasicFormatOld/: BasicFormat.swift  InferIndentation.swift  Trivia+FormatExtensions.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftCompilerPluginOld/: CompilerPlugin.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftDiagnosticsOld/: CMakeLists.txt  Convenience.swift  Diagnostic.swift  GroupedDiagnostics.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftIDEUtilsOld/: CMakeLists.txt  FixItApplier.swift  SwiftIDEUtilsCompatibility.swift  Syntax+Classifications.swift  SyntaxClassification.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftIfConfigOld/: BuildConfiguration.swift  ConfiguredRegions.swift  IfConfigDecl+IfConfig.swift  IfConfigDiagnostic.swift  IfConfigEvaluation.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftLexicalLookupOld/: LookupName.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftLibraryPluginProviderOld/: LibraryPluginProvider.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftOperatorsOld/: CMakeLists.txt  Operator.swift  OperatorTable+Defaults.swift  OperatorTable+Folding.swift  OperatorTable+Semantics.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftParserDiagnosticsOld/: LexerDiagnosticMessages.swift  MissingNodesError.swift  ParseDiagnosticsGenerator.swift  ParserDiagnosticMessages.swift  PresenceUtils.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftParserOld/: Attributes.swift  CollectionNodes+Parsable.swift  Directives.swift  ExpressionInterpretedAsVersionTuple.swift  Expressions.swift  IsValidIdentifier.swift  Lookahead.swift  Parameters.swift  ParseSourceFile.swift  Patterns.swift  Specifiers.swift  Statements.swift  StringLiteralRepresentedLiteralValue.swift  TokenPrecedence.swift  TokenSpecSet.swift  TriviaParser.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftRefactorOld/: AddSeparatorsToIntegerLiteral.swift  CMakeLists.txt  ConvertComputedPropertyToStored.swift  FormatRawStringLiteral.swift  IntegerLiteralUtilities.swift  RefactoringProvider.swift  RemoveSeparatorsFromIntegerLiteral.swift  SyntaxUtils.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftSyntaxBuilderOld/: ConvenienceInitializers.swift  ResultBuilderExtensions.swift  SyntaxParsable+ExpressibleByStringInterpolation.swift  ValidatingSyntaxNodes.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftSyntaxMacroExpansionOld/: BasicMacroExpansionContext.swift  FunctionParameterUtils.swift  MacroSpec.swift  MacroSystem.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftSyntaxMacrosGenericTestSupportOld/: Assertions.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftSyntaxMacrosOld/: MacroExpansionDiagnosticMessages.swift  Syntax+LexicalContext.swift
Sources/LocalPackages/swift-syntax-old/Sources/SwiftSyntaxOld/: CMakeLists.txt  SyntaxArena.swift  SyntaxText.swift  Trivia.swift
Sources/LocalPackages/swift-syntax-old/Sources/VersionMarkerModules/: CMakeLists.txt
Sources/LocalPackages/swift-syntax-old/Sources/_SwiftSyntaxCShimsOld/: CMakeLists.txt
Sources/LocalPackages/swift-syntax-old/Sources/_SwiftSyntaxTestSupportOld/: SyntaxProtocol+Initializer.swift
Sources/LocalPackages/swift-syntax-old/Tests/PerformanceTest/: ParsingPerformanceTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftCompilerPluginTest/: CompilerPluginTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftDiagnosticsTest/: ParserDiagnosticsFormatterIntegrationTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftIfConfigTest/: EvaluateTests.swift  TestingBuildConfiguration.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftLexicalLookupTest/: Assertions.swift  MarkerExpectation.swift  ResultExpectation.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftOperatorsTest/: SyntaxSynthesisTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftParserDiagnosticsTest/: DiagnosticInfrastructureTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftParserTest/: Assertions.swift  DirectiveTests.swift  DoExpressionTests.swift  ExpressionTypeTests.swift  IncrementalParsingTests.swift  LexerTests.swift  ParserTestCase.swift  ParserTests.swift  PatternTests.swift  TypeCompositionTests.swift  ValueGenericsTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftRefactorTest/: ExpandEditorPlaceholderTests.swift  IntegerLiteralUtilities.swift  OpaqueParameterToGeneric.swift  RefactorTestUtils.swift  ReformatIntegerLiteral.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftSyntaxBuilderTest/: ArrayExprTests.swift  Assertions.swift  BooleanLiteralTests.swift  BreakStmtSyntaxTests.swift  ClassDeclSyntaxTests.swift  ClosureExprTests.swift  DoStmtTests.swift  ExtensionDeclTests.swift  FloatLiteralTests.swift  FunctionParameterSyntaxTests.swift  FunctionSignatureSyntaxTests.swift  FunctionTests.swift  FunctionTypeSyntaxTests.swift  ImportDeclSyntaxTests.swift  ProtocolDeclTests.swift  StringInterpolationTests.swift  SwitchTests.swift  TernaryExprTests.swift  TupleTests.swift  VariableTests.swift
Sources/LocalPackages/swift-syntax-old/Tests/SwiftSyntaxMacroExpansionTest/: BodyMacroTests.swift  CodeItemMacroTests.swift  ExpressionMacroTests.swift  ExtensionMacroTests.swift  LexicalContextTests.swift  MultiRoleMacroTests.swift  PreambleMacroTests.swift
swift-collections-old/: README.md  (+1 more)
(+854 files in other folders)
