# This source file is part of the Swift.org open source project
#
# Copyright (c) 2014 - 2023 Apple Inc. and the Swift project authors
# Licensed under Apache License v2.0 with Runtime Library Exception
#
# See http://swift.org/LICENSE.txt for license information
# See http://swift.org/CONTRIBUTORS.txt for Swift project authors

add_subdirectory(_SwiftLibraryPluginProviderCShimsOld)
add_subdirectory(_SwiftSyntaxCShimsOld)
add_subdirectory(SwiftBasicFormatOld)
add_subdirectory(SwiftSyntaxOld)
add_subdirectory(SwiftDiagnosticsOld)
add_subdirectory(SwiftLexicalLookup)
add_subdirectory(SwiftLibraryPluginProviderOld)
add_subdirectory(SwiftParserOld)
add_subdirectory(SwiftParserDiagnosticsOld)
add_subdirectory(SwiftRefactorOld)
add_subdirectory(SwiftOperatorsOld)
add_subdirectory(SwiftIfConfig)
add_subdirectory(SwiftSyntaxBuilderOld)
add_subdirectory(SwiftSyntaxMacrosOld)
add_subdirectory(SwiftSyntaxMacroExpansionOld)
add_subdirectory(SwiftCompilerPluginMessageHandlingOld)
add_subdirectory(SwiftIDEUtilsOld)
add_subdirectory(SwiftCompilerPluginOld)
add_subdirectory(VersionMarkerModules)
