# This source file is part of the Swift.org open source project
#
# Copyright (c) 2014 - 2023 Apple Inc. and the Swift project authors
# Licensed under Apache License v2.0 with Runtime Library Exception
#
# See http://swift.org/LICENSE.txt for license information
# See http://swift.org/CONTRIBUTORS.txt for Swift project authors

# Version Marker Modules.
# See the 'Macro Versioning.md' document for more details.
add_library(${SWIFTSYNTAX_TARGET_NAMESPACE}SwiftSyntax509Old STATIC
  SwiftSyntax509Old/Empty.swift)
add_library(${SWIFTSYNTAX_TARGET_NAMESPACE}SwiftSyntax510Old STATIC
  SwiftSyntax509Old/Empty.swift)
add_library(${SWIFTSYNTAX_TARGET_NAMESPACE}SwiftSyntax600Old STATIC
  SwiftSyntax509Old/Empty.swift)
